# teste_custom_user

./: build.sh  db.sqlite3  pyproject.toml  render.yaml  requirements.txt
config/: settings.py
core/: models.py
core/migrations/: 0001_initial.py
user/: admin.py
user/migrations/: 0001_initial.py
usuarios/: admin.py  models.py
usuarios/migrations/: 0001_initial.py  0002_usuario_cpf_usuario_data_nascimento_usuario_telefone.py  0003_alter_usuario_data_nascimento.py
