
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Marco André Mendes", email = "marcoandre@gmail.com"},
]
dependencies = [
    "django==3.2",
    "whitenoise[brotli]>=6.5.0",
    "gunicorn>=20.1.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"

